重構代碼